monaco does not working

--- a/packages/testring-recorder-backend/templates/index.hbs
+++ b/packages/testring-recorder-backend/templates/index.hbs
@@ -8,9 +8,9 @@
     <title>Document</title>
     <script>
         window.rcRecorderConfig = {
-            host: {{ host }},
+            host: '{{ host }}',
             ws: {
-                protocol: {{ wsProtocol }},
+                protocol: '{{ wsProtocol }}',
                 port: {{ wsPort }},
             }
         };
