WAT-537 add PathComposer

--- a/packages/recorder-backend/templates/index.hbs
+++ b/packages/recorder-backend/templates/index.hbs
@@ -16,7 +16,7 @@
         };
     </script>
 </head>
-<body>
+<body data-test-automation-id="root">
     <div id="rcRecorderApp"></div>
     <script src="/index.bundle.js" ></script>
 </body>
