WIP: initial editor on the page

--- a/packages/recorder-frontend/src/components/editor/style.css
+++ b/packages/recorder-frontend/src/components/editor/style.css
@@ -1,5 +1,7 @@
 .editorWrapper {
+    height: 100%;
+    width: 100%;
     display: block;
     position: relative;
-    padding: 40px;
+    overflow: hidden;
 }
