--- a/packages/devtool-frontend/src/components/editor/style.css
+++ b/packages/devtool-frontend/src/components/editor/style.css
@@ -5,3 +5,36 @@
     position: relative;
     overflow: hidden;
 }
+
+.highlightTextInline0 {
+    background-color: rgba(255, 0, 0, 0.5);
+    font-style: oblique;
+}
+
+.highlightTextInline1 {
+    background-color: rgba(0, 255, 0, 0.5);
+    font-style: oblique;
+}
+
+.highlightTextInline2 {
+    background-color: rgba(0, 0, 255, 0.5);
+    font-style: oblique;
+}
+
+.highlightColumn0 {
+    background-color: rgba(255, 0, 0);
+    width: 5px !important;
+    margin-left: 3px;
+}
+
+.highlightColumn1 {
+    background-color: rgba(0, 255, 0);
+    width: 5px !important;
+    margin-left: 3px;
+}
+
+.highlightColumn2 {
+    background-color: rgba(0, 0, 255);
+    width: 5px !important;
+    margin-left: 3px;
+}
